app/static/style.css
/* ... */
.landing-feature__description a {
    font-size: 15pt;
    color: #FFF;
}
.landing-feature__item.active .landing-feature__img {
    background-color: #1DD069;
}
.landing-feature__item.active a {
    font-weight: 700;
}


.landing-feature__arrow div {
    margin: 0 auto;
}
.landing-feature__arrow img {
    width: 2rem;
}


.landing-progress {
    background-image: url("background/bg-4-progress-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 5rem;
}

.landing-maps {
    background-image: url("background/bg-2-maps-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 3rem;
}

.landing-maps__header {
    color: #ffffff;
}

.landing-maps__header h3 span {
    font-weight: 700;
}

.landing-resources {
    background-image: url("background/bg-3-resources-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 5rem;
}

.landing-resources__text p {
    padding-bottom: 5rem;
}

.landing-resources__text p span {
    font-weight: 700;
}

.landing-resources__cards {
    padding-top: 3rem;
}

.landing-resources__cards .card {
    border-radius: .75rem;
    border: 0;
    box-shadow: 0px 20px 19px 0px rgba(135,135,135,0.3);
    margin-bottom: 2rem;
}

.landing-resources__cards .card-section p {
    font-size: 15pt;
    margin-bottom: 0;
}

.landing-resources__cards .card-section--header {
    font-weight: 700;
}

/* Footer */
#footer-stay-in-touch-div{
    background-image: url("background/bg-5-stay-in-touch-div.png");
    color: #ffffff;
    padding-top: 3.5rem;
    padding-bottom: 7rem;
}

#footer-stay-in-touch-div p,
#footer-stay-in-touch-div h1 {
    color: #ffffff;
}

#footer-stay-in-touch-div p {
    max-width: 30rem;
}

.footer-stay-in-touch__img a {
    float: right;
    padding-left: 5rem;
}

#footer-contact-div{
    padding-top: 7rem;
    padding-bottom: 7rem;
    background-color: #eeeff1;
    font-size: 14pt;
}

.footer-contact__text {
    padding-left: .5rem;
}

.footer-contact__header {
    font-weight: 700;
    text-transform: uppercase;
}

#footer-contact-div p {
    font-size: 14pt;
    line-height: 18pt;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.footer-contact__arrow div {
    background-color: #1DD069;
    width: 4rem;
    height: 4rem;
    border-radius: 100px;
    text-align: center;
    float: right;
    clear: both;
}

.footer-contact__arrow div:link,
.footer-contact__arrow div:visited {
    -webkit-transition: transform .2s ease-in;
    transition: transform .2s ease-in;
}

.footer-contact__arrow div:hover {
    transform: translateY(-3px);
    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
    cursor: pointer;
}

.footer-contact__arrow img {
    width: 1.875rem;
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

#footer-logos-div{
    background-color: #ffffff;
    font-size: 14pt;
    line-height: 18pt;
    padding-top: 4rem;
    padding-bottom: 4rem;
}

#footer-logos-div p {
    font-size: 14pt;
    line-height: 18pt;
}

.footer-logos__img {
    text-align: center;
}

.footer-logos__img--giz {
    text-align: left;
}

@media only screen and (min-width: 640px) {
    .footer-logos__img--giz {
        position: relative;
    }
    
    .footer-logos__img--giz div {
        position: absolute;
        bottom: 0;
        right: 0;
    }
}

#footer-logos-div img{
    height: 7rem;
}

#footer-logos-giz img{
    height: 3rem;
}

#footer-license-div{
    background-color: #93939f;
    color: #ffffff;
    font-size: 14pt;
    line-height: 18pt;
    padding-top: 2rem;
    padding-bottom: 1.5rem;
}

#footer-license-div a,
#footer-license-div p {
    color: #ffffff;
    font-size: 14pt;
    line-height: 18pt;
    padding-right: 1rem;
    margin-bottom: 0;
}

#footer-license-div p {
    padding-right: 0;
}

#footer-license-div div{
    color: #ffffff;
}

#footer-license-div img{
    height: 2rem;
}

.footer-license__img {
    text-align: right;
}

/* overwrite existing css rule (wam_fotter.scss?) */
footer:not(.footer-hp) {
    padding-bottom: 0;
}

/* About Page*/

#about-content section {
    padding-top: 2rem;
    padding-bottom: 8rem;
}

#about-content h2 {
    padding-bottom: 4rem;
}

#about-content h3 {
    font-size: 20pt;
    font-weight: 700;
    margin-top: 0;
}

.light-grey{
    background-color: #EEEFF1;
}

.semi-grey{
    background-color: #E0E2E9;
}

.about-card {
    margin-top: 5rem;
}

.about-card__content {
    background-color: #1DD069;
}

.about-card__link {
    display: inline-block;
    background-color: #085064;
    padding: .25rem 1.5rem .35rem;
}

.about-card__link a {
    color: #fff;
}

.about-card__link a img {
    height: 1.5rem;
}

.about-intro__cards .about-card:nth-child(odd) {
    padding-right: 3rem;
}

.about-intro__cards .about-card:nth-child(even) {
    padding-left: 3rem;
}

.about-intro__cards .about-card__content {
    padding: 2rem;
}

.about-intro__cards p,
.about-intro__cards h3 {
    color: #fff;
}

#about-fmp-content .about-fmp__item:not(:last-child)  {
    padding-bottom: 4rem;
}
#about-stakeholder img {
    height: 15rem;
}

.about-stakeholder__item {
    padding-bottom: 3rem;
}

.about-stakeholder__item a {
    color: #1DD069;
    font-weight: 700;
}

.section-about .section-about__text {
    margin-bottom: 5rem;
}

.section-about .section-about__text--nomargin {
    margin-bottom: 0;
}

.section-about .section-about__img {
    text-align: right;
}

/* Fonts */
@font-face {
    font-family: 'Poppins';
    src: url('fonts/Poppins-Regular.woff2') format('woff2'),
        url('fonts/Poppins-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
/* ... */

